# tempus-fugit

./: .gitignore  GUI_INSTRUCTIONS.md  Makefile  README.md  festival.py  jump.py  main.py  pyproject.toml  requirements.txt  timer_gui.py  timer_utils.py  weird.py
